--- a/genewiki/templates/base.jade
+++ b/genewiki/templates/base.jade
@@ -16,22 +16,22 @@ head
 
         meta(property='og:title', content='CleanIt')
         meta(property='og:type', content='article')
-        meta(property='og:image', content='#{STATIC_URL}static/img/logo.jpg')
+        meta(property='og:image', content='{{STATIC_URL}}static/img/logo.jpg')
         meta(property='og:url', content='http://example.com')
         meta(property='og:description', content='')
 
         meta(name='twitter:card', content='summary')
         meta(name='twitter:title', content='PROJECT DEFAULT')
         meta(name='twitter:description', content='')
-        meta(name='twitter:image', content='#{STATIC_URL}static/img/logo.jpg')
+        meta(name='twitter:image', content='{{STATIC_URL}}static/img/logo.jpg')
 
     block head-title
       title GeneWiki
 
-    link(rel='stylesheet', href='#{STATIC_URL}css/bootstrap.min.css')
-    link(rel='stylesheet', href='#{STATIC_URL}css/bootstrap-theme.min.css')
-    link(rel='stylesheet', href='#{STATIC_URL}css/ladda.min.css')
-    link(rel='stylesheet', href='#{STATIC_URL}css/style.css')
+    link(rel='stylesheet', href='{{STATIC_URL}}css/bootstrap.min.css')
+    link(rel='stylesheet', href='{{STATIC_URL}}css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='{{STATIC_URL}}css/ladda.min.css')
+    link(rel='stylesheet', href='{{STATIC_URL}}css/style.css')
 
 body
     block header
@@ -41,13 +41,13 @@ body
     block pre-footer
     block footer
 
-        script(src='#{STATIC_URL}js/libs/jquery-2.1.1.min.js')
-        script(src='#{STATIC_URL}js/libs/underscore-min.js')
-        script(src='#{STATIC_URL}js/libs/bootstrap.min.js')
-        script(src='#{STATIC_URL}js/libs/d3.v3.min.js')
-        script(src='#{STATIC_URL}js/libs/spin.min.js')
-        script(src='#{STATIC_URL}js/libs/ladda.min.js')
-        script(src='#{STATIC_URL}js/app.js')
+        script(src='{{STATIC_URL}}js/libs/jquery-2.1.1.min.js')
+        script(src='{{STATIC_URL}}js/libs/underscore-min.js')
+        script(src='{{STATIC_URL}}js/libs/bootstrap.min.js')
+        script(src='{{STATIC_URL}}js/libs/d3.v3.min.js')
+        script(src='{{STATIC_URL}}js/libs/spin.min.js')
+        script(src='{{STATIC_URL}}js/libs/ladda.min.js')
+        script(src='{{STATIC_URL}}js/app.js')
 
         - if not debug
             script.
