--- a/genewiki/templates/wiki/create.jade
+++ b/genewiki/templates/wiki/create.jade
@@ -9,43 +9,46 @@ block content
           .row
             .col-xs-12
               - if title
+                h2 Congratulations, you have created a wikipedia article.
                 a(href='http://en.wikipedia.org/wiki/{{title}}', target='_blank')
-                  h2 Article: <span class='title'>#{title}</span>
+                  h3 Article: <span class='title'>#{title}</span>
 
                 div(role='alert').alert.alert-warning
-                  p One of the titles below exists on Wikipedia; manual editing required.
+                  p Further editing will need to be done manually. The infobox box may take several minutes                    to display in a new article.  
 
           .row
             .col-xs-12
               form(role='form', method='POST')
                 - csrf_token
+             
                 .form-group
-                  h3 Possible titles:
-
-                  .radio
-                    label
-                      - if titles.name.1
-                        input(type='radio', name='page_type', value='name', disabled='true')
-                        p <strong>Gene name:</strong> <a href='http://en.wikipedia.org/wiki/{{titles.name.0}}' target='_blank'>#{titles.name.0}</a> <strong class='bg-success'>Exists</strong>
-                      - else
-                        input(type='radio', name='page_type', value='name')
-                        p <strong>Gene name:</strong> #{titles.name.0} <strong class='bg-warning'>Missing</strong>
-                  .radio
-                    label
-                      - if titles.symbol.1
-                        input(type='radio', name='page_type', value='symbol', disabled='true')
-                        p <strong>Gene symbol:</strong> <a href='http://en.wikipedia.org/wiki/{{titles.symbol.0}}' target='_blank'>#{titles.symbol.0}</a> <strong class='bg-success'>Exists</strong>
-                      - else
-                        input(type='radio', name='page_type', value='symbol')
-                        p <strong>Gene symbol:</strong> #{titles.symbol.0} <strong class='bg-warning'>Missing</strong>
-                  .radio
-                    label
-                      - if titles.altsym.1
-                        input(type='radio', name='page_type', value='altsym', disabled='true')
-                        p <strong>Alternate title:</strong> <a href='http://en.wikipedia.org/wiki/{{titles.altsym.0}}' target='_blank'>#{titles.altsym.0}</a> <strong class='bg-success'>Exists</strong>
-                      - else
-                        input(type='radio', name='page_type', value='altsym')
-                        p <strong>Alternate title:</strong> #{titles.altsym.0} <strong class='bg-warning'>Missing</strong>
+                  - if results.stub
+                    h3 Possible titles:
+                  
+                    .radio
+                      label
+                        - if titles.name.1
+                          input(type='radio', name='page_type', value='name', disabled='true')
+                          p <strong>Gene name:</strong> <a href='http://en.wikipedia.org/wiki/{{titles.name.0}}' target='_blank'>#{titles.name.0}</a> <strong class='bg-success'>Exists</strong>
+                        - else
+                          input(type='radio', name='page_type', value='name')
+                          p <strong>Gene name:</strong> #{titles.name.0} <strong class='bg-warning'>Missing</strong>
+                    .radio
+                      label
+                        - if titles.symbol.1
+                          input(type='radio', name='page_type', value='symbol', disabled='true')
+                          p <strong>Gene symbol:</strong> <a href='http://en.wikipedia.org/wiki/{{titles.symbol.0}}' target='_blank'>#{titles.symbol.0}</a> <strong class='bg-success'>Exists</strong>
+                        - else
+                          input(type='radio', name='page_type', value='symbol')
+                          p <strong>Gene symbol:</strong> #{titles.symbol.0} <strong class='bg-warning'>Missing</strong>
+                    .radio
+                      label
+                        - if titles.altsym.1
+                          input(type='radio', name='page_type', value='altsym', disabled='true')
+                          p <strong>Alternate title:</strong> <a href='http://en.wikipedia.org/wiki/{{titles.altsym.0}}' target='_blank'>#{titles.altsym.0}</a> <strong class='bg-success'>Exists</strong>
+                        - else
+                          input(type='radio', name='page_type', value='altsym')
+                          p <strong>Alternate title:</strong> #{titles.altsym.0} <strong class='bg-warning'>Missing</strong>
 
                 .form-group
                   - if results.stub
@@ -54,11 +57,10 @@ block content
 
                     button(type='submit', data-style='zoom-out', data-color='green', data-size='s').btn.btn-success.ladda-button.col-xs-offset-1
                       | Create
-
                 .form-group
                   textarea(rows='15', cols='50', readonly='readonly', style='display:none;').form-control
                     #{results.stub}
-
+                  p *Note: It may take several minutes for an article to be created please be patient.  
 
 block post-footer
     script.
