forced update of newly created wikipedia page by resaving

--- a/genewiki/templates/wiki/create.jade
+++ b/genewiki/templates/wiki/create.jade
@@ -14,7 +14,7 @@ block content
                   h3 Article: <span class='title'>#{title}</span>
 
                 div(role='alert').alert.alert-warning
-                  p Further editing will need to be done manually. The infobox box may take several minutes                    to display in a new article.  
+                  p Further editing will need to be done manually. 
 
           .row
             .col-xs-12
