--- a/genewiki/templates/report_base.jade
+++ b/genewiki/templates/report_base.jade
@@ -5,8 +5,8 @@ html.no-js(lang='en')
 head
      block head-title
          title Wikidata Statistics
-     link(rel='stylesheet', href='{{STATIC_URL}}css/report_style.css')
-     link(rel='stylesheet', href='{{STATIC_URL}}js/libs/jquery-ui-1.12.0.custom/jquery-ui.css')
+     link(rel='stylesheet', type='text/css', href='{{STATIC_URL}}css/report_style.css')
+     link(rel='stylesheet', type='text/css', href='{{STATIC_URL}}js/libs/jquery-ui-1.12.0.custom/jquery-ui.css')
      script(src='{{STATIC_URL}}js/libs/jquery-ui-1.12.0.custom/external/jquery/jquery.js')
      script(src='{{STATIC_URL}}js/libs/jquery-ui-1.12.0.custom/jquery-ui.js')
      script(type='text/javascript', src='https://www.gstatic.com/charts/loader.js')
